fix by average